--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint src/**/*.{js} --fix"
   },
   "lint-staged": {
-    "src/**/*.{js,json}": [
+    "src/**/*.{js}": [
       "prettier --write"
     ]
   },
