--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
         xcode: '9.0'
     steps:
       - run:
-          command: curl -X POST -d {} ${endpoint}
+          command: curl -X POST -d {} ${awesome_endpoint}
 
 
 workflows:
