--- a/package.json
+++ b/package.json
@@ -21,14 +21,7 @@
     "lint": "eslint src/**/*.{js} --fix"
   },
   "lint-staged": {
-    "src/**/*.{js}": [
-      "prettier --write"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "**/*": "prettier --write --ignore-unknown"
   },
   "eslintConfig": {
     "extends": [
