--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,6 @@ jobs:
       - run:
           command: curl -X POST -d {} ${awesome_endpoint}
 
-
 workflows:
   version: 2
   build:
@@ -37,8 +36,8 @@ workflows:
       - build:
           filters:
             branches:
-              ignore: main
+              ignore: develop
       - deploy:
           filters:
             branches:
-              only: main
+              only: develop
